# TR2-2024.2-Grupo10

./: README.MD  cliente.py  file_handler.py  incentive.py  peer.py  pyproject.toml  testep.py  tracker.py  utilidades_socket.py
message/: message.py
tracker/: __main__.py
